cmake_minimum_required(VERSION 3.8)

add_definitions("-std=c++17")
add_executable(867A 867A/main.cpp)
add_executable(894A 894A/main.cpp)
add_executable(899A 899A/main.cpp)
add_executable(900A 900A/main.cpp)
add_executable(902A 902A/main.cpp)
add_executable(906A 906A/main.cpp)
add_executable(908A 908A/main.cpp)
add_executable(909A 909A/main.cpp)
add_executable(910A 910A/main.cpp)
add_executable(911A 911A/main.cpp)
add_executable(912A 912A/main.cpp)
add_executable(913A 913A/main.cpp)
add_executable(914A 914A/main.cpp)
add_executable(915A 915A/main.cpp)
add_executable(909B 909B/main.cpp)
add_executable(911B 911B/main.cpp)
add_executable(912B 912B/main.cpp)
add_executable(913B 913B/main.cpp)
add_executable(914B 914B/main.cpp)
add_executable(914D 914D/main.cpp)
add_executable(915B 915B/main.cpp)
add_executable(911C 911C/main.cpp)
add_executable(915C 915C/main.cpp)
add_executable(911D 911D/main.cpp)
add_executable(908G 908G/main.cpp)
